--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gather & Read - Cozy Audiobooks & Book Clubs</title>
-    <meta name="description" content="Join the coziest audiobook community. listen to great stories and discuss them with clear audio and friendly clubs.">
+    <meta name="description"
+        content="Join the coziest audiobook community. listen to great stories and discuss them with clear audio and friendly clubs.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <!-- Navigation -->
@@ -35,7 +40,8 @@
         <div class="container hero-container">
             <div class="hero-content">
                 <h1>Stories are better when shared.</h1>
-                <p>Immerse yourself in a world of audiobooks and join a community that loves listening as much as you do. Your next favorite book is waiting.</p>
+                <p>Immerse yourself in a world of audiobooks and join a community that loves listening as much as you
+                    do. Our AI finds your perfect next read.</p>
                 <div class="hero-buttons">
                     <a href="#pricing" class="btn btn-primary">Join the Club</a>
                     <a href="#catalog" class="btn btn-secondary">Explore Library</a>
@@ -46,8 +52,8 @@
                 <div class="floating-badge badge-1">
                     <span class="icon">🎧</span>
                     <div class="text">
-                        <strong>Over 10k+</strong>
-                        <span>Audiobooks</span>
+                        <strong>99% Match</strong>
+                        <span>AI Score</span>
                     </div>
                 </div>
             </div>
@@ -58,10 +64,10 @@
     <section id="catalog" class="catalog">
         <div class="container">
             <div class="section-header">
-                <h2>Curated for You</h2>
-                <p>Discover our top picks for this month across different genres.</p>
+                <h2>AI-Curated for You</h2>
+                <p>Our algorithm analyzes your taste to discover your next obsession.</p>
             </div>
-            
+
             <div class="book-grid">
                 <!-- Book Card 1 -->
                 <article class="book-card">
@@ -122,7 +128,8 @@
             </div>
             <div class="clubs-content">
                 <h2>Never Listen Alone</h2>
-                <p>Join exclusive book clubs, participate in live discussions with authors, and make friends who share your literary tastes. It's like a book club in your pocket.</p>
+                <p>Join exclusive book clubs, participate in live discussions with authors, and make friends who share
+                    your literary tastes. It's like a book club in your pocket.</p>
                 <ul class="feature-list">
                     <li>
                         <span class="check">✓</span>
@@ -141,8 +148,8 @@
                     <li>
                         <span class="check">✓</span>
                         <div>
-                            <strong>Reading Streaks</strong>
-                            <p>Track your progress together and earn badges.</p>
+                            <strong>AI Discussion Starters</strong>
+                            <p>Never run out of things to say with smart prompts.</p>
                         </div>
                     </li>
                 </ul>
@@ -182,7 +189,7 @@
                     <ul class="benefits">
                         <li><strong>1 Credit</strong> per month (any book)</li>
                         <li>Unlimited book clubs</li>
-                        <li><strong>30% off</strong> additional books</li>
+                        <li><strong>AI Voice</strong> Customization</li>
                         <li>Ad-free listening</li>
                     </ul>
                     <a href="#" class="btn btn-primary full-width">Start Free Trial</a>
@@ -240,4 +247,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
