--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="nav-links">
                 <a href="#catalog">Catalog</a>
                 <a href="#clubs">Clubs</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#" class="btn btn-primary small">Get Started</a>
+                <a href="#clubs">Clubs</a>
+                <a href="#waitlist" class="btn btn-primary small">Get Started</a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -43,7 +43,7 @@
                 <p>Immerse yourself in a world of audiobooks and join a community that loves listening as much as you
                     do. Our AI finds your perfect next read.</p>
                 <div class="hero-buttons">
-                    <a href="#pricing" class="btn btn-primary">Join the Club</a>
+                    <a href="#waitlist" class="btn btn-primary">Join the Club</a>
                     <a href="#catalog" class="btn btn-secondary">Explore Library</a>
                 </div>
             </div>
@@ -158,56 +158,18 @@
         </div>
     </section>
 
-    <!-- Pricing Section -->
-    <section id="pricing" class="pricing">
-        <div class="container">
-            <div class="section-header">
-                <h2>Simple, Transparent Pricing</h2>
-                <p>Choose the plan that fits your reading style.</p>
-            </div>
 
-            <div class="pricing-grid">
-                <!-- Free Tier -->
-                <div class="pricing-card">
-                    <h3>Explorer</h3>
-                    <div class="price">Free</div>
-                    <p class="desc">Perfect for casual listeners.</p>
-                    <ul class="benefits">
-                        <li>Access to public domain classics</li>
-                        <li>Join 1 public book club</li>
-                        <li>Ad-supported listening</li>
-                    </ul>
-                    <a href="#" class="btn btn-outline">Sign Up Free</a>
-                </div>
-
-                <!-- Pro Tier (Featured) -->
-                <div class="pricing-card featured">
-                    <div class="best-value">Most Popular</div>
-                    <h3>Bookworm</h3>
-                    <div class="price">$14.99<span>/mo</span></div>
-                    <p class="desc">For the dedicated listener.</p>
-                    <ul class="benefits">
-                        <li><strong>1 Credit</strong> per month (any book)</li>
-                        <li>Unlimited book clubs</li>
-                        <li><strong>AI Voice</strong> Customization</li>
-                        <li>Ad-free listening</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary full-width">Start Free Trial</a>
-                </div>
-
-                <!-- Family Tier -->
-                <div class="pricing-card">
-                    <h3>Family</h3>
-                    <div class="price">$24.99<span>/mo</span></div>
-                    <p class="desc">Share the love of stories.</p>
-                    <ul class="benefits">
-                        <li><strong>2 Credits</strong> per month</li>
-                        <li>Up to 4 accounts</li>
-                        <li>Parental controls</li>
-                        <li>Shared library</li>
-                    </ul>
-                    <a href="#" class="btn btn-outline">Get Family Plan</a>
-                </div>
+    <!-- Waitlist Section -->
+    <section id="waitlist" class="waitlist">
+        <div class="container waitlist-container">
+            <div class="waitlist-content">
+                <h2>Join the Club</h2>
+                <p>We're opening spots gradually to ensure the best experience. Sign up to get early access and a free
+                    audiobook.</p>
+                <form class="waitlist-form" onsubmit="event.preventDefault(); alert('Thanks for joining!');">
+                    <input type="email" placeholder="Enter your email address" required>
+                    <button type="submit" class="btn btn-primary">Join Waitlist</button>
+                </form>
             </div>
         </div>
     </section>
